# apikey-manager-gui

./: .gitignore  .prettierignore  README.md  eslint.config.js  forge.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.main.config.mjs  vite.preload.config.mjs  vite.renderer.config.mjs
.github/workflows/: release.yml
.husky/: pre-commit
gui/: __init__.py
my-vue-app/: index.html  package-lock.json  package.json
my-vue-app/src/: main.js
src/: ApiKeyDTO.py  ApiKeyManager.py  ApikeyManager.py  App.vue  ProfileBridge.ts  i18n.js  i18n.ts  main.js  main.ts  preload.js  preload.ts  renderer.js  renderer.ts  router.js  style.css
src/components/: ApplicationHeader.vue  BrokerConnection.js  BrokerConnectionChecker.vue  BrokerNodeList.vue  BrokerNodeViewer.vue  BrokerProfileManager.vue  BrokerRequestList.vue  BrokerRequestViewer.vue  BrokerStatusIndicator.vue  ClinicCredentialsForm.vue  ClinicCredentialsInput.vue  ClinicCredentialsTable.vue  CredentialProfileManager.vue  HelloWorld.vue  Helper.js  Helper.vue  LanguageSwitcher.vue  NodeCredentialsForm.vue  NodeCredentialsTable.vue  NodeCredsForm.vue  NodeCredsTable.vue  NodeStatusInfoTimeline.vue  SimpleChipList.vue  home.vue  login.vue  passwordChanger.js
src/locales/: de.json  en.json
src/locals/: de.json  en.json
src/router/: index.ts
src/service/: BrokerConnection.ts
src/services/: BrokerApiClient.ts  BrokerConnection.ts  BrokerCredentials.ts  ChangeNotifier.ts  NodeCnCache.ts  ProfileStorage.ts  (+2 more)
templates/: index.html
tests/: AddApiKeyTestCase.py  __init__.py
(+20 files in other folders)
