[project]
name = "aktin-apikey-gui"
version = "0.1.0"
description = "A simple Python GUI client for managing AKTIN API keys via the admin REST endpoint."
authors = [
    { name="Daniel Kombeiz", email="dkombeiz@ukaachen.de" },
    { name="Alexander Kombeiz", email="akombeiz@ukaachen.de" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flaskwebgui>=1.1.6",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
